--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: creo;
+  src: url(../html-test-workspace/fonts/CHROMOH.ttf);
+}
+
 /*Селектор за типом елемента (X)*/
 h1 {
   background-color: #a4deab;
@@ -9,7 +14,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Tahoma";
+  font-family: "creo";
 }
 
 ul,
