--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h4,
 h5,
 h6 {
   font-family: "creo";
+  font-size: 40px;
 }
 
 ul,
@@ -103,3 +104,32 @@ p {
 }
 
 /*text-decoration: none | underline | line-through | overline*/
+button {
+  width: 150px;
+  height: 50px;
+  cursor: pointer;
+  background: #6dd6d1;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0px 10px 25px #57aba7, 0px -10px 25px#a6fffa,
+    insert 0px -5px 10px #57aba7, insert 0px 5px 10px #a6fffa;
+  font-family: "damion", cursive;
+  color: white;
+  font-size: 20px;
+  transition: 500ms;
+}
+
+button:hover {
+  border: 2px solid #6dd6d1;
+  animation: hueRotation 2s linear infinite;
+}
+
+@keyframes hueRotation {
+  to {
+    filter: hue-rotate(360deg);
+  }
+}
+
+button:focus {
+  outline: none;
+}
