--- a/style.css
+++ b/style.css
@@ -104,6 +104,17 @@ p {
 }
 
 /*text-decoration: none | underline | line-through | overline*/
+
+.noselect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-top-highlight-color: transparent;
+}
+
 button {
   width: 150px;
   height: 50px;
